test/parser/inputs/invalid/missing-semicolon.yah
while yah
    spit "suh dude"